--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@prisma/client": "^5.22.0",
+    "@tailwindcss/postcss": "^4.1.17",
     "date-fns": "^3.0.0",
     "next": "^15.5.6",
     "react": "^18.3.1",
@@ -26,7 +27,7 @@
     "autoprefixer": "^10.4.0",
     "postcss": "^8.4.0",
     "prisma": "^5.22.0",
-    "tailwindcss": "^3.4.0",
+    "tailwindcss": "^3.4.18",
     "tsx": "^4.7.0",
     "typescript": "^5.0.0"
   }
