--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next": "^15.5.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hot-toast": "^2.6.0",
     "zod": "^3.23.0"
   },
   "devDependencies": {
